Panels 4.7.x-dev

  o #120919 (by Grugnog2) empty content caused array error
  o #84204 (by drewish, et al) make tables install UTF-8.
  o #110771 (by Robrecht Jacques) Save panel did on creation allowing modules to interact with it
  o #114772 (by Tobias Maier) allow custom content to specify CSS Info
  o #120913 (by Grugnog2) provide panels_is_panel_page() function for context
  o #118954 (by slantview) respect block visibility settings
  o #110461 (by Robrecht Jacques) fixed improper use of drupal_goto on delete submit
  o #81949 (by RobRoy) fixed another problem with arrays and empty panels
  o #117581 (by pearcec) Allow node types to suppress their title.
  o #89174 (by amatan) fix PHP 5 referencing error.
  o #93355 (by redsky) PGSQL table support
  o #119841: Force page title in case menu title has been changed