@@ -1,26 +1,26 @@
-/* $Id: twocol_stacked.css,v 1.4 2006/08/22 23:54:20 merlinofchaos Exp $ */
+/* $Id: twocol_stacked.css,v 1.4.2.1 2007/03/15 20:16:40 merlinofchaos Exp $ */
 
 .panel-2col-stacked { 
   /* border: 1px solid red; */ 
   overflow: hidden; 
 }
 
-.panel-2col-stacked div div { 
-  margin: .5em;
+.panel-2col-stacked div > div {
+  margin: .5px;
 }
 
 .panel-2col-stacked .panel-col-top,
-.panel-2col-stacked .panel-col-bottom { 
-  width: 100%; 
+.panel-2col-stacked .panel-col-bottom {
+  width: 99.9%;
   clear: both;
 }
-.panel-2col-stacked .panel-col-first { 
-  float: left; 
-  width: 50%; 
+.panel-2col-stacked .panel-col-first {
+  float: left;
+  width: 47%;
 }
-.panel-2col-stacked .panel-col-last { 
-  float: left; 
-  width: 50%; 
+.panel-2col-stacked .panel-col-last {
+  float: right;
+  width: 47%;
 }
 .panel-clearer {
   clear: both;
